Update submodule NooDS

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = externals/NooDS
 	url = https://github.com/unexploredtest/NooDS.git
 	branch = pynds
+[submodule "externals/nanobind"]
+	path = externals/nanobind
+	url = https://github.com/wjakob/nanobind
