--- a/.github/workflows/ci-wheels.yml
+++ b/.github/workflows/ci-wheels.yml
@@ -24,6 +24,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+            submodules: 'recursive'
 
     - name: Build wheels
       uses: pypa/cibuildwheel@v3.0
