--- a/.github/workflows/ci-wheels.yml
+++ b/.github/workflows/ci-wheels.yml
@@ -30,6 +30,8 @@ jobs:
       env:
         CIBW_ARCHS: "${{ matrix.arch }}"
         CIBW_SKIP: "cp314*"
+        CIBW_ARCHS_MACOS: "arm64 x86_64"
+        CIBW_ENVIRONMENT_MACOS: 'MACOSX_DEPLOYMENT_TARGET=11.0'
 
     - name: Upload wheels
       uses: actions/upload-artifact@v4
